--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
 	<title>PORCODDIO</title>
 	<link rel="stylesheet" type="text/css" href="page.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="animate.css">
 </head>
 <body>
 
-		<div id="TESTO"> <p id="testo2">MUORI MALE DIO BESTIA</p>
+		<h1 class"animated infinite bounce delay-2s">
+			<div id="TESTO"> 
+				<p id="testo2">MUORI MALE DIO BESTIA
+					</p>
+						</h1>
 			</div>
 		
 			
