--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-		<h1 class"animated infinite bounce delay-2s">
+		<h1 class="animated infinite bounce delay-2s">
 			<div id="TESTO"> 
 				<p id="testo2">MUORI MALE DIO BESTIA
 					</p>
