--- a/index.html
+++ b/index.html
@@ -8,11 +8,8 @@
 </head>
 <body>
 
-		<h1 class="animated infinite bounce delay-2s">
-			<div id="TESTO"> 
-				<p id="testo2">MUORI MALE DIO BESTIA
-					</p>
-						</h1>
+		<div id="TESTO" class="animated infinite bounce delay-2s">
+			 <p id="testo2">MUORI MALE DIO BESTIA</p>
 			</div>
 		
 			
