--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 </head>
 <body>
 
-		<div id="TESTO" class="animated infinite bounce delay-2s">
+		<div id="TESTO">
+			<h1 class="animated infinite bounce delay-2s">
 			 <p id="testo2">MUORI MALE DIO BESTIA</p>
 			</div>
+			</h1>
 		
-			<h1 class="animated infinite bounce delay-2s">Example</h1>
+			
 
 		
 			<style type="text/css">
