--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 <body>
 
 		<div id="TESTO">
-			<h1 class="animated infinite bounce delay-2s">
+			
 			 <p id="testo2">MUORI MALE DIO BESTIA</p>
 			</div>
-			</h1>
+
+			<h1 class="animated infinite bounce delay-2s"></h1>
+
 		
 			
 
