--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
 
 		<div id="TESTO">
-			<h1 class="animated infinite bounce delay-2s"></h1>
+			<h1 class="animated infinite bounce delay-2s"> <p id="testo2">MUORI MALE DIO BESTIA</p></h1>
 			
-			 <p id="testo2">MUORI MALE DIO BESTIA</p>
+			
 			</div>
 
 
